--- a/templates/edit.html
+++ b/templates/edit.html
@@ -25,38 +25,40 @@
 
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Name" name="name" required>
-                    </div>
-                    <div class="form-group mt-2">
+          </div>
+          <div class="form-group mt-2">
                         <select id="gender" name="gender" class="form-control" required>
                             <option selected>select gender</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
                         </select>
-                    </div>
-                    <div class="form-group">
+          </div>
+          <div class="form-group">
                         <input type="number" class="form-control  mt-2" placeholder="Age" name="age" required>
 
-                    </div>
-
-                    <div class="form-group">
+          </div>
+          <div class="form-group">
                         <input type="email" class="form-control  mt-2" placeholder="Email" name="email" required>
-                    </div>
-
-                    <div class="form-group">
+          </div>
+          <div class="form-group">
                         <input type="number" class="form-control  mt-2" placeholder="Phone" name="phone" required>
 
-                    </div>
-                    <div class="form-group">
+          </div>
+          <div class="form-group">
                         <input type="text" class="form-control  mt-2" placeholder="RegID" name="regID" required>
 
-                    </div>
-                    <div class="form-group mt-2">
+          </div>
+          <div class="form-group mt-2">
                         <select id="membership" name="membership" class="form-control" required>
                             <option selected>select membership plan</option>
                             <option value="silver">Silver</option>
                             <option value="platinum">Platinum</option>
                         </select>
-                    </div>
+          </div>
+          <div class="form-group">
+                        <input type="number" class="form-control  mt-2" placeholder="Amount" name="amount" required>
+
+          </div>
 
                     <div class="d-grid gap-2">
 
