--- a/templates/login.html
+++ b/templates/login.html
@@ -72,19 +72,9 @@
           </div>
 
           <!-- Submit button -->
-            <a href=""><button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button></a>
+            <a href="{% url 'dash' %}"><button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button></a>
 
-          <div class="divider d-flex align-items-center my-4">
-            <p class="text-center fw-bold mx-3 mb-0 text-muted">OR</p>
-          </div>
 
-          <a class="btn btn-primary btn-lg btn-block" style="background-color: #3b5998" href="#!"
-            role="button">
-            <i class="fab fa-facebook-f me-2"></i>Continue with Facebook
-          </a>
-          <a class="btn btn-primary btn-lg btn-block" style="background-color: #55acee" href="#!"
-            role="button">
-            <i class="fab fa-twitter me-2"></i>Continue with Twitter</a>
 
         </form>
       </div>
