--- a/templates/bookstore.html
+++ b/templates/bookstore.html
@@ -14,15 +14,16 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+       {% load static %}
+      <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}">
       <!-- style css -->
-      <link rel="stylesheet" type="text/css" href="css/style.css">
+      <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="{% static "css/responsive.css" %}">
       <!-- fevicon -->
       <link rel="icon" href="images/fevicon.png" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="{% static "css/jquery.mCustomScrollbar.min.css" %}">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <!-- fonts -->
@@ -32,8 +33,8 @@
       <!--  -->
       <!-- owl stylesheets -->
       <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Poppins:400,700&display=swap&subset=latin-ext" rel="stylesheet">
-      <link rel="stylesheet" href="css/owl.carousel.min.css">
-      <link rel="stylesoeet" href="css/owl.theme.default.min.css">
+      <link rel="stylesheet" href="{% static "css/owl.carousel.min.css" %}">
+      <link rel="stylesoeet" href="{% static "css/owl.theme.default.min.css" %}">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
    </head>
    <body>
@@ -624,14 +625,14 @@
       </div>
       <!-- copyright section end -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/popper.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
-      <script src="js/plugin.js"></script>
+      <script src="{% static "js1/jquery.min.js" %}"></script>
+      <script src="{% static "js1/popper.min.js" %}"></script>
+      <script src="{% static "js1/bootstrap.bundle.min.js" %}"></script>
+      <script src="{% static "js1/jquery-3.0.0.min.js" %}"></script>
+      <script src="{% static "js1/plugin.js" %}"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="{% static "js1/jquery.mCustomScrollbar.concat.min.js" %}"></script>
+      <script src="{% static "js1/custom.js" %}"></script>
       <script>
          function openNav() {
            document.getElementById("mySidenav").style.width = "250px";
