finalized front end

--- a/static/style11.css
+++ b/static/style11.css
@@ -1,5 +1,8 @@
 /*--------------------------------------------------------------------- File Name: style.css ---------------------------------------------------------------------*/
-
+.btn-group-vertical>.btn:not(:first-child),
+.btn-group-vertical>.btn-group:not(:first-child) {
+margin-top: 0;
+}
 
 /*--------------------------------------------------------------------- import Fonts ---------------------------------------------------------------------*/
 
