--- a/templates/payments.html
+++ b/templates/payments.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Barne's Pay</title>
 </head>
 <body>
 <form action="" method="POST">
     {% csrf_token %}
 
-    <input type="number" name="amount" placeholder="Enter Amount"><br><br>
+
     <input type="text" name="phone" placeholder="Enter Phone Number"><br><br>
     <input type="submit" value="Pay">
 </form>
