--- a/templates/project.html
+++ b/templates/project.html
@@ -12,15 +12,16 @@
       <meta name="description" content="">
       <meta name="author" content="">
       <!-- bootstrap css -->
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      {% load static %}
+      <link rel="stylesheet" href="{% static "bootstrap.min.css" %}">
       <!-- style css -->
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="{% static "style11.css" %}">
       <!-- Responsive-->
-      <link rel="stylesheet" href="css/responsive.css">
+      <link rel="stylesheet" href="{% static "responsive.css"%}">
       <!-- fevicon -->
-      <link rel="icon" href="images/fevicon.png" type="image/gif" />
+      <link rel="icon" href="{% static "img/fevicon.png" %}" type="image/gif" />
       <!-- Scrollbar Custom CSS -->
-      <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
+      <link rel="stylesheet" href="{% static "jquery.mCustomScrollbar.min.css" %}">
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
@@ -30,11 +31,7 @@
    </head>
    <!-- body -->
    <body class="main-layout inner_page">
-      <!-- loader  -->
-      <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#"/></div>
-      </div>
-      <!-- end loader -->
+
       <!-- header -->
       <header class="full_bg">
          <!-- header inner -->
@@ -85,19 +82,19 @@
                                  <div class="collapse navbar-collapse" id="navbarsExample04">
                                     <ul class="navbar-nav mr-auto">
                                        <li class="nav-item ">
-                                          <a class="nav-link" href="registration.html">Home</a>
+                                          <a class="nav-link" href="{% url 'home' %}">Home</a>
                                        </li>
                                        <li class="nav-item">
-                                          <a class="nav-link" href="about.html">About</a>
+                                          <a class="nav-link" href="{% url 'about' %}">About</a>
                                        </li>
                                        <li class="nav-item active">
-                                          <a class="nav-link" href="project.html">services</a>
+                                          <a class="nav-link" href="{% url 'project' %}">services</a>
                                        </li>
                                        <li class="nav-item">
-                                          <a class="nav-link" href="staff.html">founders</a>
+                                          <a class="nav-link" href="{% url 'staff' %}">founders</a>
                                        </li>
                                        <li class="nav-item">
-                                          <a class="nav-link" href="contact.html">Contact Us</a>
+                                          <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
                                        </li>
                                     </ul>
                                  </div>
@@ -155,18 +152,18 @@
                                     <div class="col-md-4">
                                        <div class="project">
                                           <div class="project_img">
-                                             <figure><img src="images/sm.jpg" alt="#"/></figure>
+                                             <figure><img src="{% static "img/sm.jpg" %}" alt="#"/></figure>
                                           </div>
                                           <div id="pro_ho" class="project_text">
-                                             <h3>Shop in Our<br>Bookstore</h3>
-                                             <p>We have a variety of books to fit any age,taste & genre. Daily sales to favour your budget.</p>
+                                             <h3>Barne's Library</h3>
+                                             <p>Visit our libraries at our local branches and find a vast selection of books to borrow.</p>
                                           </div>
                                        </div>
                                     </div>
                                     <div class="col-md-4">
                                        <div class="project">
                                           <div class="project_img">
-                                             <figure><img src="images/bc.jpg" alt="#"/></figure>
+                                             <figure><img src="{% static "img/bc.jpg" %}" alt="#"/></figure>
                                           </div>
                                           <div id="pro_ho" class="project_text">
                                              <h3>Genre Based<br>Book Clubs</h3>
@@ -177,11 +174,11 @@
                                     <div class="col-md-4">
                                        <div class="project">
                                           <div class="project_img">
-                                             <figure><img src="images/pt.jpg" alt="#"/></figure>
+                                             <figure><img src="{% static "img/kd.jpg" %}" alt="#"/></figure>
                                           </div>
                                           <div id="pro_ho" class="project_text">
-                                             <h3>Platinum Membership<br></h3>
-                                             <p>This grants you a discount on every book purchase. Platinum members are also granted special edition books at discounted prices. Furthermore, Platinum Members receive a free, specialised book haul evry month.</p>
+                                             <h3>Junior Readers</h3>
+                                             <p>This offers children an opportunity to enjoy reading in a fun, regulated environment under close supervision.</p>
                                           </div>
                                        </div>
                                     </div>
@@ -189,96 +186,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="carousel-item">
-                           <div class="container-fluid">
-                              <div class="carousel-caption relative3">
-                                 <div class="row">
-                                    <div class="col-md-4">
-                                       <div class="project">
-                                          <div class="project_img">
-                                             <figure><img src="images/project_img.png" alt="#"/></figure>
-                                          </div>
-                                          <div id="pro_ho" class="project_text">
-                                             <h3>Reader will be<br> distracted by the readable</h3>
-                                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                       <div class="project">
-                                          <div class="project_img">
-                                             <figure><img src="images/project_img2.png" alt="#"/></figure>
-                                          </div>
-                                          <div id="pro_ho" class="project_text">
-                                             <h3>Reader will be<br> distracted by the readable</h3>
-                                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                       <div class="project">
-                                          <div class="project_img">
-                                             <figure><img src="images/project_img1.png" alt="#"/></figure>
-                                          </div>
-                                          <div id="pro_ho" class="project_text">
-                                             <h3>Reader will be<br> distracted by the readable</h3>
-                                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <div class="carousel-item">
-                           <div class="container-fluid">
-                              <div class="carousel-caption relative3">
-                                 <div class="row">
-                                    <div class="col-md-4">
-                                       <div class="project">
-                                          <div class="project_img">
-                                             <figure><img src="images/project_img2.png" alt="#"/></figure>
-                                          </div>
-                                          <div id="pro_ho" class="project_text">
-                                             <h3>Reader will be<br> distracted by the readable</h3>
-                                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                       <div class="project">
-                                          <div class="project_img">
-                                             <figure><img src="images/project_img.png" alt="#"/></figure>
-                                          </div>
-                                          <div id="pro_ho" class="project_text">
-                                             <h3>Reader will be<br> distracted by the readable</h3>
-                                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-                                          </div>
-                                       </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                       <div class="project">
-                                          <div class="project_img">
-                                             <figure><img src="images/project_img1.png" alt="#"/></figure>
-                                          </div>
-                                          <div id="pro_ho" class="project_text">
-                                             <h3>Reader will be<br> distracted by the readable</h3>
-                                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised</p>
-                                          </div>
-                                       </div>
-                                    </div>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#proj" role="button" data-slide="prev">
-                        <i class="fa fa-arrow-left" aria-hidden="true"></i>
-                        <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#proj" role="button" data-slide="next">
-                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
-                        <span class="sr-only">Next</span>
-                        </a>
+
                      </div>
                   </div>
                </div>
@@ -292,7 +200,7 @@
             <div class="container">
                <div class="row">
                   <div class=" col-lg-3 col-md-6">
-                     <a class="logo_bottom"><img src="images/barnes.png" alt="#"/></a>
+                     <a class="logo_bottom"><img src="{% static "img/barnes.png" %}" alt="#"/></a>
                      <p class="many">
 
 About Barne's
@@ -302,20 +210,20 @@ We are a company which prides itself in providing reading resources to small com
                   <div class="col-lg-2 offset-lg-1 col-md-6">
                      <h3>QUICK LINKS</h3>
                      <ul class="link_menu">
-                        <li><a href="registration.html">Home</a></li>
-                        <li><a href="about.html"> About</a></li>
-                        <li><a href="project.html">services</a></li>
-                        <li><a href="staff.html">Founders</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'about' %}"> About</a></li>
+                        <li><a href="{% url 'project' %}">services</a></li>
+                        <li><a href="{% url 'staff' %}">Founders</a></li>
+                        <li><a href="{% url 'contact' %}">Contact Us</a></li>
                      </ul>
                   </div>
                   <div class=" col-lg-3 col-md-6">
                      <h3>INSTAGRAM FEEDS</h3>
                      <ul class="insta text_align_left">
-                        <li><img src="images/bie.jpg" alt="#"/></li>
-                        <li><img src="images/lib.jpg" alt="#"/></li>
-                        <li><img src="images/bookstore.jpg" alt="#"/></li>
-                        <li><img src="images/why.jpg alt="#"/></li>
+                        <li><img src="{% static "img/bie.jpg" %}" alt="#"/></li>
+                        <li><img src="{% static "img/lib.jpg" %}" alt="#"/></li>
+                        <li><img src="{% static "img/bookstore.jpg" %}  alt="#"/></li>
+                        <li><img src="{% static "img/why.jpg" %} alt="#"/></li>
                      </ul>
                   </div>
                   <div class=" col-lg-3 col-md-6 ">
@@ -340,11 +248,11 @@ We are a company which prides itself in providing reading resources to small com
       </footer>
       <!-- end footer -->
       <!-- Javascript files-->
-      <script src="js/jquery.min.js"></script>
-      <script src="js/bootstrap.bundle.min.js"></script>
-      <script src="js/jquery-3.0.0.min.js"></script>
+      <script src="{% static "js/jquery.min.js" %}"></script>
+      <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+      <script src="{% static "js/jquery-3.0.0.min.js" %}"></script>
       <!-- sidebar -->
-      <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
-      <script src="js/custom.js"></script>
+      <script src="{% static "js/jquery.mCustomScrollbar.concat.min.js" %}"></script>
+      <script src="{% static "js/custom.js" %}"></script>
    </body>
 </html>
