--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Emobilis</title>
+    <title>BcEdit</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -31,6 +31,7 @@
                             <option selected>select gender</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
+                            <option value="rns">Rather Not Say </option>
                         </select>
           </div>
           <div class="form-group">
@@ -44,21 +45,7 @@
                         <input type="number" class="form-control  mt-2" placeholder="Phone" name="phone" required>
 
           </div>
-          <div class="form-group">
-                        <input type="text" class="form-control  mt-2" placeholder="RegID" name="regID" required>
 
-          </div>
-          <div class="form-group mt-2">
-                        <select id="membership" name="membership" class="form-control" required>
-                            <option selected>select membership plan</option>
-                            <option value="silver">Silver</option>
-                            <option value="platinum">Platinum</option>
-                        </select>
-          </div>
-          <div class="form-group">
-                        <input type="number" class="form-control  mt-2" placeholder="Amount" name="amount" required>
-
-          </div>
 
                     <div class="d-grid gap-2">
 
