--- a/templates/index (copy).html
+++ b/templates/index (copy).html
@@ -286,7 +286,7 @@
                <div class="col-lg-6 col-md-7 ">
                   <div class="titlepage">
                      <h2 style="color: white;">Why Choose Us</h2>
-                     <p style="color: white;"> <strong>  We think providing exceptional customer service is our USP, our main strength. We take pride in providing outstanding services to our clients. We know that our customers are important for us and hence we do not leave any stone unturned in helping, guiding and providing the best possible solutions & after sales services and support to our clients. Because we’ve been there and done it. When you choose us, you’ll feel the benefit of 15 years’ experience of providing literacy to the community.</strong></p>
+                     <p style="color: white;"> <strong>  Providing exceptional customer service is our USP, our main strength. We take pride in providing outstanding services to our clients. We know that our customers are important for us and hence we do not leave any stone unturned in helping, guiding and providing the best possible solutions & after sales services and support to our clients. Because we’ve been there and done it. When you choose us, you’ll feel the benefit of 15 years’ experience of providing literacy to the community.</strong></p>
                      <div class="award">
                         <div id="awa_ho" class="award_icon text_align_center">
                            <i><img src="{% static "img/ch1.png" %}" alt="#"/>
