crud for bc,jr and lib

--- a/static/style11.css
+++ b/static/style11.css
@@ -737,7 +737,7 @@ ul.search li a:hover {
 /** choose section **/
 
 .choose {
-     background: url("../static/img/why2.jpg");
+     background: url("../static/img/why.jpg");
      background-size: 100% 100%;
      background-position: center;
      background-repeat: no-repeat;
