--- a/templates/jrschedule.html
+++ b/templates/jrschedule.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Barne's Book Club</title>
+    <title>Junior Schedule</title>
     {% load static %}
       <link rel="stylesheet" href="{% static "bootstrap.css" %}">
       <link rel="stylesheet" href="{% static "bootstrap.min.css" %}">
@@ -73,52 +73,37 @@
          <!-- end header -->
          <!-- banner -->
 </header><br><br><br>
-<section class="vh-100">
-  <div class="container py-5 h-100">
-    <div class="row d-flex align-items-center justify-content-center h-100">
-      <div class="col-md-8 col-lg-7 col-xl-6">
-        <img src="{% static "img/bookclub.jpg" %}"
-          class="img-fluid" alt="Phone image">
-      </div>
-      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form action="/insertbc" method="post">
-            {% csrf_token %}
-          <!-- Email input -->
-          <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Name" name="name" required>
-          </div>
-          <div class="form-group mt-2">
-                        <select id="gender" name="gender" class="form-control" required>
-                            <option selected>select gender</option>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="rns">Rather not say</option>
-                        </select>
-          </div>
-          <div class="form-group">
-                        <input type="number" class="form-control  mt-2" placeholder="Age" name="age" required>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Date</th>
+      <th scope="col">Time</th>
+      <th scope="col">Title</th>
+      <th scope="col">Staff</th>
+      <th scope="col">StaffID</th>
 
-          </div>
-          <div class="form-group">
-                        <input type="email" class="form-control  mt-2" placeholder="Email" name="email" required>
-          </div>
-          <div class="form-group">
-                        <input type="number" class="form-control  mt-2" placeholder="Phone" name="phone" required>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>18/11/2023</td>
+      <td>1200hrs</td>
+      <td>Charlotte's Web</td>
+      <td>Denis Wafula</td>
+      <td>BC105</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>25/11/2023</td>
+      <td>1200hrs</td>
+      <td>The Little Prince</td>
+      <td>Rose Mwangi</td>
+      <td>BC43</td>
+    </tr>
 
-          </div>
-
-
-
-
-            <a href="{% url 'bcschedule' %}" class="btn btn-primary">Join</a>
-
-
-
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
+  </tbody>
+</table>
 </body>
-
 </html>
