--- a/templates/bcschedule.html
+++ b/templates/bcschedule.html
@@ -2,9 +2,102 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Schedule</title>
+    {% load static %}
+      <link rel="stylesheet" href="{% static "bootstrap.css" %}">
+      <link rel="stylesheet" href="{% static "bootstrap.min.css" %}">
+      <!-- style css -->
+      <link rel="stylesheet" href="{% static "style11.css" %}">
+      <!-- Responsive-->
+      <link rel="stylesheet" href="{% static "responsive.css"%}">
+      <!-- fevicon -->
+      <link rel="icon" href="{% static "img/fevicon.png" %}" type="image/gif" />
+      <!-- Scrollbar Custom CSS -->
+      <link rel="stylesheet" href="{% static "jquery.mCustomScrollbar.min.css" %}">
+      <!-- Tweaks for older IEs-->
+      <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+
+
+      <link rel="stylesheet" href="{% static "style.css" %}">
+      <link rel="stylesheet" href="{% static "js/style.js" %}">
 </head>
 <body>
+<header class="full_bg">
+         <!-- header inner -->
+         <div class="header">
+
+            <div class="container">
+               <div class="row">
+                  <div class="col-md-12">
+                     <div class="header_bottom">
+                        <div class="row">
+                           <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
+                              <div class="full">
+                                 <div class="center-desk">
+                                    <div class="logo">
+                                       <a href="{% url 'dashb' %}">BARNE'S CLUB</a>
+                                    </div>
+                                 </div>
+                              </div>
+                           </div>
+                           <div class="col-xl-9 col-lg-9 col-md-9 col-sm-9">
+                              <nav class="navigation navbar navbar-expand-md navbar-dark ">
+                                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+                                 <span class="navbar-toggler-icon"></span>
+                                 </button>
+                                 <div class="collapse navbar-collapse" id="navbarsExample04">
+                                    <ul class="navbar-nav mr-auto">
+                                       <li class="nav-item">
+                                          <a class="nav-link" href="{% url 'dashb' %}">Dashboard</a>
+                                       </li>
+                                       <li class="nav-item active">
+                                          <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
+                                       </li>
+
+
+                                    </ul>
+                                 </div>
+                                 <ul class="search">
+                                    <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                                 </ul>
+                              </nav>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- end header inner -->
+         <!-- end header -->
+         <!-- banner -->
+</header><br><br><br>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Month</th>
+      <th scope="col">Title</th>
+      <th scope="col">Author</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>November</td>
+      <td>Girl, Woman, Other</td>
+      <td>Bernardine Evaristo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>December</td>
+      <td>Homegoing</td>
+      <td>Yaa Gyasi</td>
+    </tr>
+
+  </tbody>
+</table>
 
 </body>
 </html>
