--- a/templates/dash.html
+++ b/templates/dash.html
@@ -49,23 +49,24 @@
                                  <div class="collapse navbar-collapse" id="navbarsExample04">
                                     <ul class="navbar-nav mr-auto">
                                        <li class="nav-item">
-                                          <a class="nav-link" href="{% url 'home' %}">Library</a>
+                                          <a class="nav-link" href="{% url 'library' %}">Library</a>
                                        </li>
                                        <li class="nav-item active">
-                                          <a class="nav-link" href="{% url 'about' %}">Book Club</a>
+                                          <a class="nav-link" href="{% url 'bc' %}">Book Club</a>
                                        </li>
                                        <li class="nav-item">
-                                          <a class="nav-link" href="{% url 'project' %}">Junior Readers</a>
+                                          <a class="nav-link" href="{% url 'junior' %}">Junior Readers</a>
                                        </li>
                                        <li class="nav-item">
-                                          <a class="nav-link" href="{% url 'staff' %}">Awards Club</a>
+                                          <a class="nav-link" href="{% url 'awards' %}">Awards Club</a>
+                                       </li>
+                                       <li class="nav-item">
+                                          <a class="nav-link" href="{% url 'home' %}">Home</a>
                                        </li>
 
                                     </ul>
                                  </div>
-                                 <ul class="search">
-                                    <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                                 </ul>
+
                               </nav>
                            </div>
                         </div>
@@ -81,7 +82,7 @@
 <div class="row row-cols-3 g-3">
   <div class="col">
     <div class="card">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top"
+      <img src="{% static "img/bookclub2.jpg" %}" class="card-img-top"
         alt="Hollywood Sign on The Hill" />
       <div class="card-body">
         <h5 class="card-title">Book Club</h5>
@@ -89,13 +90,13 @@
           This is a longer card with supporting text below as a natural lead-in to
           additional content. This content is a little bit longer.
         </p>
-        <a href="#" class="btn btn-primary">Join</a>
+        <a href="{% url 'bc' %}" class="btn btn-primary">Join</a>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
+      <img src="{% static "img/kidsr(1).jpg" %}" class="card-img-top"
         alt="Palm Springs Road" />
       <div class="card-body">
         <h5 class="card-title">Junior Readers</h5>
@@ -103,25 +104,25 @@
           This is a longer card with supporting text below as a natural lead-in to
           additional content. This content is a little bit longer.
         </p>
-        <a href="#" class="btn btn-primary">Join</a>
+        <a href="{% url 'junior' %}" class="btn btn-primary">Join</a>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top"
+      <img src="{% static "img/library1.jpg" %}" class="card-img-top"
         alt="Los Angeles Skyscrapers" />
       <div class="card-body">
         <h5 class="card-title">Library</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
           additional content.</p>
-        <a href="#" class="btn btn-primary">Join</a>
+        <a href="{% url 'library' %}" class="btn btn-primary">Join</a>
       </div>
     </div>
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top"
+      <img src="{% static "img/awards(1).jpg" %}" class="card-img-top"
         alt="Skyscrapers" />
       <div class="card-body">
         <h5 class="card-title">Awards Club</h5>
@@ -129,7 +130,7 @@
           This is a longer card with supporting text below as a natural lead-in to
           additional content.
         </p>
-        <a href="#" class="btn btn-primary">Join</a>
+        <a href="{% url 'awards' %}" class="btn btn-primary">Join</a>
       </div>
     </div>
   </div>
