--- a/templates/junior.html
+++ b/templates/junior.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Barne's Book Club</title>
+    <title>Junior Readers</title>
     {% load static %}
       <link rel="stylesheet" href="{% static "bootstrap.css" %}">
       <link rel="stylesheet" href="{% static "bootstrap.min.css" %}">
@@ -77,22 +77,25 @@
   <div class="container py-5 h-100">
     <div class="row d-flex align-items-center justify-content-center h-100">
       <div class="col-md-8 col-lg-7 col-xl-6">
-        <img src="{% static "img/bookclub.jpg" %}"
+        <img src="{% static "img/kds(1).jpg" %}"
           class="img-fluid" alt="Phone image">
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form action="/insertbc" method="post">
+        <form action="/insertjr" method="post">
             {% csrf_token %}
           <!-- Email input -->
           <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Name" name="name" required>
+                        <input type="text" class="form-control" placeholder="Parent's Name" name="parent_name" required>
+          </div>
+          <div class="form-group">
+                        <input type="text" class="form-control" placeholder="Junior's Name" name="junior_name" required>
           </div>
           <div class="form-group mt-2">
                         <select id="gender" name="gender" class="form-control" required>
                             <option selected>select gender</option>
                             <option value="male">Male</option>
                             <option value="female">Female</option>
-                            <option value="rns">Rather not say</option>
+
                         </select>
           </div>
           <div class="form-group">
@@ -100,17 +103,17 @@
 
           </div>
           <div class="form-group">
-                        <input type="email" class="form-control  mt-2" placeholder="Email" name="email" required>
+                        <input type="email" class="form-control  mt-2" placeholder="Parent's Email" name="parent_email" required>
           </div>
           <div class="form-group">
-                        <input type="number" class="form-control  mt-2" placeholder="Phone" name="phone" required>
+                        <input type="number" class="form-control  mt-2" placeholder="Parent's Phone" name="parent_phone" required>
 
           </div>
 
 
 
 
-            <a href="{% url 'bcschedule' %}" class="btn btn-primary">Join</a>
+            <a href="{% url 'jrschedule' %}" class="btn btn-primary">Join</a>
 
 
 
@@ -120,5 +123,4 @@
   </div>
 </section>
 </body>
-
 </html>
