--- a/templates/library.html
+++ b/templates/library.html
@@ -2,8 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Barne's Book Club</title>
+    <title>Barne's Libary</title>
     {% load static %}
+      <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.css" %}" />
+
+  <!--owl slider stylesheet -->
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+  <!-- nice select  -->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha512-CruCP+TD3yXzlvvijET8wV5WxxEh5H8P4cmz0RFbKK6FlZ2sYl3AEsKlLPHbniXKSrDdFewhbmBK5skbdsASbQ==" crossorigin="anonymous" />
+  <!-- font awesome style -->
+      <link href="{% static "css/font-awesome.min.css" %}" rel="stylesheet" />
+
+  <!-- Custom styles for this template -->
+      <link href="{% static "css/style.css" %}" rel="stylesheet" />
+  <!-- responsive style -->
+      <link href="{% static "css/responsive.css" %}" rel="stylesheet" />
       <link rel="stylesheet" href="{% static "bootstrap.css" %}">
       <link rel="stylesheet" href="{% static "bootstrap.min.css" %}">
       <!-- style css -->
@@ -73,52 +86,6 @@
          <!-- end header -->
          <!-- banner -->
 </header><br><br><br>
-<section class="vh-100">
-  <div class="container py-5 h-100">
-    <div class="row d-flex align-items-center justify-content-center h-100">
-      <div class="col-md-8 col-lg-7 col-xl-6">
-        <img src="{% static "img/bookclub.jpg" %}"
-          class="img-fluid" alt="Phone image">
-      </div>
-      <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-        <form action="/insertbc" method="post">
-            {% csrf_token %}
-          <!-- Email input -->
-          <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Name" name="name" required>
-          </div>
-          <div class="form-group mt-2">
-                        <select id="gender" name="gender" class="form-control" required>
-                            <option selected>select gender</option>
-                            <option value="male">Male</option>
-                            <option value="female">Female</option>
-                            <option value="rns">Rather not say</option>
-                        </select>
-          </div>
-          <div class="form-group">
-                        <input type="number" class="form-control  mt-2" placeholder="Age" name="age" required>
 
-          </div>
-          <div class="form-group">
-                        <input type="email" class="form-control  mt-2" placeholder="Email" name="email" required>
-          </div>
-          <div class="form-group">
-                        <input type="number" class="form-control  mt-2" placeholder="Phone" name="phone" required>
-
-          </div>
-
-
-
-
-            <a href="{% url 'bcschedule' %}" class="btn btn-primary">Join</a>
-
-
-
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
 </body>
-
 </html>
