--- a/templates/staff.html
+++ b/templates/staff.html
@@ -220,7 +220,7 @@ We are a company which prides itself in providing reading resources to small com
                   <div class="col-lg-2 offset-lg-1 col-md-6">
                      <h3>QUICK LINKS</h3>
                      <ul class="link_menu">
-                        <li><a href="{% url 'home' %}l">Home</a></li>
+                        <li><a href="{% url 'home' %}">Home</a></li>
                         <li><a href="{% url 'about' %}"> About</a></li>
                         <li><a href="{% url 'project' %}">Projects</a></li>
                         <li><a href="{% url 'staff' %}">Staff</a></li>
