--- a/templates/awards.html
+++ b/templates/awards.html
@@ -73,7 +73,7 @@
          <!-- end header -->
          <!-- banner -->
 </header><br><br><br>
-<h2>Congratulations!</h2>
-<h4>You have received 100 Barne points!</h4>
+<img src="{% static "img/congratulations1.gif" %}" alt="#"/><br><br>
+<h1>You have received 100 Barne points!</h1>
 </body>
 </html>
