--- a/templates/jrschedule.html
+++ b/templates/jrschedule.html
@@ -73,6 +73,7 @@
          <!-- end header -->
          <!-- banner -->
 </header><br><br><br>
+<h1 style="margin-left: 300px;">Junior Readers Schedule</h1><br><br>
 <table class="table">
   <thead>
     <tr>
