--- a/templates/signin.html
+++ b/templates/signin.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Schedule</title>
+    <title>Sign In</title>
     {% load static %}
-      <link rel="stylesheet" href="{% static "bootstrap.css" %}">
       <link rel="stylesheet" href="{% static "bootstrap.min.css" %}">
       <!-- style css -->
       <link rel="stylesheet" href="{% static "style11.css" %}">
+      <link rel="stylesheet" href="{% static "style.css" %}">
       <!-- Responsive-->
       <link rel="stylesheet" href="{% static "responsive.css"%}">
       <!-- fevicon -->
@@ -17,10 +17,6 @@
       <!-- Tweaks for older IEs-->
       <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
-
-
-      <link rel="stylesheet" href="{% static "style.css" %}">
-      <link rel="stylesheet" href="{% static "js/style.js" %}">
 </head>
 <body>
 <header class="full_bg">
@@ -46,21 +42,8 @@
                                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                                  <span class="navbar-toggler-icon"></span>
                                  </button>
-                                 <div class="collapse navbar-collapse" id="navbarsExample04">
-                                    <ul class="navbar-nav mr-auto">
-                                       <li class="nav-item">
-                                          <a class="nav-link" href="{% url 'dashb' %}">Dashboard</a>
-                                       </li>
-                                       <li class="nav-item active">
-                                          <a class="nav-link" href="{% url 'contact' %}">Contact Us</a>
-                                       </li>
 
 
-                                    </ul>
-                                 </div>
-                                 <ul class="search">
-                                    <li><a href="Javascript:void(0)"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                                 </ul>
                               </nav>
                            </div>
                         </div>
@@ -73,32 +56,43 @@
          <!-- end header -->
          <!-- banner -->
 </header><br><br><br>
-<h1 style="margin-left: 300px;">Book of The Month</h1><br>
-<table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Month</th>
-      <th scope="col">Title</th>
-      <th scope="col">Author</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>November</td>
-      <td>Girl, Woman, Other</td>
-      <td>Bernardine Evaristo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>December</td>
-      <td>Homegoing</td>
-      <td>Yaa Gyasi</td>
-    </tr>
+<form style="width: 400px;">
+  <!-- Email input -->
+  <div class="form-outline mb-4">
+    <input type="email" id="form2Example1" class="form-control" />
+    <label class="form-label" for="form2Example1">Email address</label>
+  </div>
 
-  </tbody>
-</table>
+  <!-- Password input -->
+  <div class="form-outline mb-4">
+    <input type="password" id="form2Example2" class="form-control" />
+    <label class="form-label" for="form2Example2">Password</label>
+  </div>
 
+  <!-- 2 column grid layout for inline styling -->
+  <div class="row mb-4">
+    <div class="col d-flex justify-content-center">
+      <!-- Checkbox -->
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+        <label class="form-check-label" for="form2Example31"> Remember me </label>
+      </div>
+    </div>
+
+    <div class="col">
+      <!-- Simple link -->
+      <a href="#!">Forgot password?</a>
+    </div>
+  </div>
+
+  <!-- Submit button -->
+  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+
+  <!-- Register buttons -->
+  <div class="text-center">
+    <p>Not a member? <a href="{% url 'signup' %}">Register</a></p>
+
+  </div>
+</form>
 </body>
 </html>
